--- a/package.json
+++ b/package.json
@@ -4,15 +4,55 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
+    "adhan": "^4.4.3",
     "expo": "~54.0.10",
+    "expo-av": "^16.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "^17.0.8",
+    "expo-constants": "^18.0.9",
+    "expo-dev-client": "~6.0.12",
+    "expo-device": "^8.0.8",
+    "expo-document-picker": "^14.0.7",
+    "expo-file-system": "^19.0.15",
+    "expo-font": "^14.0.8",
+    "expo-haptics": "^15.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-location": "^19.0.7",
+    "expo-media-library": "^18.2.0",
+    "expo-notifications": "^0.32.11",
+    "expo-sensors": "^15.0.7",
+    "expo-sharing": "^14.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "geolib": "^3.3.4",
+    "hijri-converter": "^1.1.1",
+    "hijri-date": "^0.2.2",
+    "prayer-times": "^0.1.0",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-animatable": "^1.4.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-maps": "1.20.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.13.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
