--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 10.0.0"
+    "version": ">= 10.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -18,15 +19,60 @@
     },
     "production": {
       "android": {
-        "gradleCommand": ":app:bundleRelease"
+        "buildType": "apk",
+        "env": {
+          "NODE_ENV": "production"
+        }
       },
       "ios": {
-        "simulator": false
+        "simulator": false,
+        "env": {
+          "NODE_ENV": "production"
+        }
+      }
+    },
+    "playstore": {
+      "android": {
+        "buildType": "app-bundle",
+        "env": {
+          "NODE_ENV": "production"
+        }
+      }
+    },
+    "ios-preview": {
+      "ios": {
+        "simulator": false,
+        "distribution": "internal",
+        "env": {
+          "NODE_ENV": "production"
+        }
+      }
+    },
+    "ios-production": {
+      "ios": {
+        "simulator": false,
+        "distribution": "store",
+        "env": {
+          "NODE_ENV": "production"
+        }
       }
     }
   },
   "submit": {
-    "production": {}
+    "production": {},
+    "playstore": {
+      "android": {
+        "serviceAccountKeyPath": "./google-service-account.json",
+        "track": "internal"
+      }
+    },
+    "ios-production": {
+      "ios": {
+        "appleId": "your-apple-id@example.com",
+        "ascAppId": "your-app-store-connect-app-id",
+        "appleTeamId": "your-apple-team-id"
+      }
+    }
   }
 }
 
