--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^7.4.8",
     "adhan": "^4.4.3",
     "expo": "~54.0.10",
-    "expo-av": "^16.0.7",
+    "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "^17.0.8",
     "expo-constants": "^18.0.9",
@@ -41,21 +41,25 @@
     "hijri-date": "^0.2.2",
     "prayer-times": "^0.1.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "^13.16.0"
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.3",
     "typescript": "~5.9.2"
   },
   "private": true
