--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "adhan": "^4.4.3",
-    "expo": "~54.0.10",
+    "expo": "54.0.12",
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "^17.0.8",
     "expo-constants": "^18.0.9",
-    "expo-dev-client": "~6.0.12",
-    "expo-device": "^8.0.8",
+    "expo-dev-client": "~6.0.13",
+    "expo-device": "~8.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.15",
     "expo-font": "^14.0.8",
@@ -31,7 +31,7 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "^19.0.7",
     "expo-media-library": "^18.2.0",
-    "expo-notifications": "^0.32.11",
+    "expo-notifications": "~0.32.12",
     "expo-sensors": "^15.0.7",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
