--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "adhan": "^4.4.3",
+    "bcrypt": "^6.0.0",
     "expo": "54.0.12",
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
@@ -39,6 +42,8 @@
     "geolib": "^3.3.4",
     "hijri-converter": "^1.1.1",
     "hijri-date": "^0.2.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prayer-times": "^0.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
