Fix Railway deployment with improved Dockerfile and railway.toml config

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install all dependencies (including dev dependencies for build)
+RUN npm ci
 
 # Copy source code
 COPY . .
@@ -16,6 +16,9 @@ RUN npx prisma generate
 
 # Build the application
 RUN npm run build
+
+# Remove dev dependencies and cache
+RUN npm prune --production && npm cache clean --force
 
 # Expose port
 EXPOSE 3000
