--- a/api/railway.toml
+++ b/api/railway.toml
@@ -8,3 +8,6 @@ healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[environments.production]
+buildCommand = "chmod +x build.sh && ./build.sh"
