--- a/api/railway.toml
+++ b/api/railway.toml
@@ -3,7 +3,7 @@ builder = "NIXPACKS"
 buildCommand = "chmod +x build.sh && ./build.sh"
 
 [deploy]
-startCommand = "node dist/main.js"
+startCommand = "chmod +x start.sh && ./start.sh"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
