--- a/.github/workflows/build-apk-simple.yml
+++ b/.github/workflows/build-apk-simple.yml
@@ -1,25 +1,27 @@
-name: Build APK (Simple)
+name: Build Tijaniyah Pro APK
 
 on:
-  workflow_dispatch: # Manual trigger only
+  workflow_dispatch: # Manual trigger
   push:
     branches: [ main ]
     paths-ignore:
       - 'README.md'
       - 'docs/**'
+      - 'CLOUD_BUILD_INSTRUCTIONS.md'
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js
+    - name: Setup Node.js 18
       uses: actions/setup-node@v4
       with:
         node-version: '18'
+        cache: 'npm'
         
     - name: Setup Java 17
       uses: actions/setup-java@v4
@@ -30,6 +32,14 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
+    - name: Cache Gradle
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        
     - name: Install dependencies
       run: |
         npm ci
@@ -41,7 +51,7 @@ jobs:
     - name: Build Release APK
       run: |
         cd android
-        ./gradlew assembleRelease --no-daemon
+        ./gradlew assembleRelease --no-daemon --stacktrace
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
@@ -49,3 +59,11 @@ jobs:
         name: tijaniyah-pro-apk
         path: android/app/build/outputs/apk/release/*.apk
         retention-days: 30
+        
+    - name: Upload build logs (on failure)
+      uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: build-logs
+        path: android/
+        retention-days: 7
