Fix GitHub Actions build issues
- Add detailed debugging steps to build workflow
- Add Android project structure verification
- Add Gradle wrapper permissions fix
- Remove EAS project ID from app.json to avoid conflicts
- Add comprehensive debug workflow for troubleshooting
- Add better error handling and logging

--- a/app.json
+++ b/app.json
@@ -69,11 +69,7 @@
         }
       ]
     ],
-    "extra": {
-      "eas": {
-        "projectId": "0c6679dc-cf6b-41f2-be84-fc83580cb435"
-      }
-    },
+    "extra": {},
     "packagerOpts": {
       "config": "metro.config.js"
     },
