--- a/.github/workflows/build-apk-simple.yml
+++ b/.github/workflows/build-apk-simple.yml
@@ -45,12 +45,31 @@ jobs:
         npm ci
         npx expo install --fix
         
+    - name: Check if android directory exists
+      run: |
+        if [ -d "android" ]; then
+          echo "Android directory exists, removing it for clean build"
+          rm -rf android
+        fi
+        
     - name: Generate Android project
-      run: npx expo prebuild --platform android --clear
-      
+      run: |
+        npx expo prebuild --platform android --clear
+        echo "Android project generated successfully"
+        ls -la android/
+        
+    - name: Verify Android project structure
+      run: |
+        echo "Checking Android project structure:"
+        ls -la android/
+        ls -la android/app/
+        echo "Gradle wrapper exists:"
+        ls -la android/gradlew
+        
     - name: Build Release APK
       run: |
         cd android
+        chmod +x gradlew
         ./gradlew assembleRelease --no-daemon --stacktrace
         
     - name: Upload APK
