Fix expo prebuild command
- Remove invalid --clear flag from expo prebuild command
- The --clear flag is not supported in expo prebuild
- Clean build is handled by removing android directory first

--- a/.github/workflows/build-apk-debug.yml
+++ b/.github/workflows/build-apk-debug.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Generate Android project
       run: |
         echo "Starting Android project generation..."
-        npx expo prebuild --platform android --clear
+        npx expo prebuild --platform android
         echo "Android project generation completed"
         
     - name: Verify project structure
