--- a/.github/workflows/build-apk-simple.yml
+++ b/.github/workflows/build-apk-simple.yml
@@ -54,7 +54,7 @@ jobs:
         
     - name: Generate Android project
       run: |
-        npx expo prebuild --platform android --clear
+        npx expo prebuild --platform android
         echo "Android project generated successfully"
         ls -la android/
         
