--- a/.github/workflows/build-ios-simple.yml
+++ b/.github/workflows/build-ios-simple.yml
@@ -48,20 +48,55 @@ jobs:
           exit 1
         fi
         
+    - name: Verify iOS project structure
+      run: |
+        cd ios
+        echo "=== iOS Project Structure ==="
+        ls -la
+        echo "=== Looking for workspace files ==="
+        find . -name "*.xcworkspace" -o -name "*.xcodeproj"
+        echo "=== Podfile exists ==="
+        ls -la Podfile || echo "No Podfile found"
+        
     - name: Install iOS dependencies
       run: |
         cd ios
         pod install --repo-update
         
+    - name: Check for workspace after pod install
+      run: |
+        cd ios
+        echo "=== After pod install ==="
+        ls -la
+        echo "=== Workspace files ==="
+        find . -name "*.xcworkspace" -o -name "*.xcodeproj"
+        
     - name: Build for iOS Simulator
       run: |
         cd ios
-        xcodebuild -workspace Tijaniyahmuslimproapp.xcworkspace \
-                   -scheme Tijaniyahmuslimproapp \
-                   -configuration Debug \
-                   -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-                   -derivedDataPath ./build \
-                   build
+        # Try workspace first, fallback to project
+        if [ -f "Tijaniyahmuslimproapp.xcworkspace" ]; then
+          echo "Building with workspace..."
+          xcodebuild -workspace Tijaniyahmuslimproapp.xcworkspace \
+                     -scheme Tijaniyahmuslimproapp \
+                     -configuration Debug \
+                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -derivedDataPath ./build \
+                     build
+        elif [ -d "Tijaniyahmuslimproapp.xcodeproj" ]; then
+          echo "Building with project..."
+          xcodebuild -project Tijaniyahmuslimproapp.xcodeproj \
+                     -scheme Tijaniyahmuslimproapp \
+                     -configuration Debug \
+                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -derivedDataPath ./build \
+                     build
+        else
+          echo "❌ No workspace or project found!"
+          echo "Available files:"
+          ls -la
+          exit 1
+        fi
                    
     - name: Check for build artifacts
       run: |
