Fix iOS Simulator destination in workflows
- Change from iPhone 15 to iPhone 16 (available in GitHub Actions)
- Use iOS 26.0 instead of 'latest' for better compatibility
- Update all iOS workflows to use correct simulator
- Fix simulator availability issue in GitHub Actions environment

--- a/.github/workflows/build-ios-ipa.yml
+++ b/.github/workflows/build-ios-ipa.yml
@@ -57,7 +57,7 @@ jobs:
           xcodebuild -workspace TijaniyahPro.xcworkspace \
                      -scheme TijaniyahPro \
                      -configuration Debug \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=26.0' \
                      -derivedDataPath ./build \
                      build
         else
