--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -92,7 +92,7 @@ jobs:
         xcodebuild -workspace Tijaniyahmuslimproapp.xcworkspace \
                    -scheme Tijaniyahmuslimproapp \
                    -configuration Debug \
-                   -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                   -destination 'platform=iOS Simulator,name=iPhone 16,OS=26.0' \
                    -derivedDataPath ./build \
                    build
                    
