--- a/.github/workflows/build-ios-simple.yml
+++ b/.github/workflows/build-ios-simple.yml
@@ -80,7 +80,7 @@ jobs:
           xcodebuild -workspace TijaniyahPro.xcworkspace \
                      -scheme TijaniyahPro \
                      -configuration Debug \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=26.0' \
                      -derivedDataPath ./build \
                      build
         elif [ -d "TijaniyahPro.xcodeproj" ]; then
@@ -88,7 +88,7 @@ jobs:
           xcodebuild -project TijaniyahPro.xcodeproj \
                      -scheme TijaniyahPro \
                      -configuration Debug \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=26.0' \
                      -derivedDataPath ./build \
                      build
         else
