--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -86,7 +86,7 @@ jobs:
           xcodebuild -workspace TijaniyahPro.xcworkspace \
                      -scheme TijaniyahPro \
                      -configuration Debug \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=26.0' \
                      -derivedDataPath ./build \
                      build
         elif [ -d "TijaniyahPro.xcodeproj" ]; then
@@ -94,7 +94,7 @@ jobs:
           xcodebuild -project TijaniyahPro.xcodeproj \
                      -scheme TijaniyahPro \
                      -configuration Debug \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=26.0' \
                      -derivedDataPath ./build \
                      build
         else
