Update app name to 'Tijaniyah Muslim Pro' throughout the application
📱 App Name Updates:
- Update app.json with final name 'Tijaniyah Muslim Pro'
- Update package.json name to 'tijaniyah-muslim-pro'
- Update all screen titles and headers
- Update component names and text
- Update notification titles and messages
- Update build workflow and release notes

🎯 Files Updated:
✅ app.json - Main app configuration
✅ package.json - Package name
✅ LanguageContext.tsx - Welcome message
✅ MoreFeaturesScreen.tsx - App info section
✅ ProfileScreen.tsx - About section
✅ NotificationContext.tsx - Notification titles
✅ LoginScreen.tsx - Login header
✅ GuestModeScreen.tsx - Welcome message
✅ AuthWrapper.tsx - Loading screen
✅ build-final-apk.yml - Build workflow

🚀 Ready for Play Store:
- Consistent branding throughout the app
- Professional app name for Play Store
- All references updated to 'Tijaniyah Muslim Pro'
- Build workflow updated with new name
- Release notes updated for final release

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Tijaniyah Pro",
+    "name": "Tijaniyah Muslim Pro",
     "slug": "tijaniyah-muslim-pro",
     "version": "1.0.0",
     "orientation": "portrait",
