--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tijaniyahmuslimproapp",
+  "name": "tijaniyah-muslim-pro",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
